adicionado autenticação e refatorado o pessoa repositório e pessoa application

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ flask = "*"
 flask-restful = "*"
 cerberus = "*"
 pymongo = "*"
+flask-jwt = "*"
+flask-jwt-extended = "*"
 
 [requires]
 python_version = "3.6"
